# unrest

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  Makefile  Makefile.config  README.md  coercers.html  framework.html  generators.html  idiom.html  index.html  pyproject.toml  pytest.ini  rest.html  search.html  setup.py  sitemap.xml  unrest.html  util.html
coercers/: index.html
docs/: .gitignore  pydocmd.yml
examples/: flask_unrest.py  flask_unrest_json_server.py  flask_unrest_yaml.py  http_server_unrest.py  sanic_unrest.py  simple_http_unrest.py  tornado_unrest.py
flask_framework/: index.html
framework/: index.html
generators/: index.html
idiom/: index.html
mkdocs/: search_index.json
rest/: index.html
search/: search_index.json
unrest/: __about__.py  __init__.py  coercers.py  flask.py  flask_framework.py  index.html  marshalling.py  openapi.py  rest.py  unrest.py  util.py
unrest/framework/: __init__.py  flask.py  http_server.py  sanic.py  simple.py  tornado.py
unrest/generators/: openapi.py  options.py
unrest/idiom/: __init__.py  json_server.py  unrest.py  yaml.py
unrest/tests/: __init__.py  conftest.py  model.py  test_coercers.py  test_flask.py  test_http_server.py  test_tornado.py  utils.py
unrest/tests/crud/: delete.py  delete_pk.py  get.py  get_pk.py  patch.py  patch_pk.py  post.py  post_pk.py  put.py  put_pk.py  test_delete.py  test_delete_pk.py  test_get.py  test_get_pk.py  test_patch.py  test_patch_pk.py  test_post.py  test_post_pk.py  test_put.py  test_put_pk.py
unrest/tests/features/: auth_decorators.py  idiom.py  misc.py  paginated.py  properties.py  relationships.py  test_auth_decorators.py  test_idiom.py  test_misc.py  test_paginated.py  test_properties.py  (+3 more)
util/: index.html
(+25 files in other folders)
