[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'unrest'
version = '1.1.0'
description = 'A troubling rest api library for sqlalchemy models'
readme = 'README.md'
requires-python = '>=3.6'
license = {text = 'GNU LGPL v3+'}
authors = [{name = 'Florian Mounier', email = 'paradoxxx.zero@gmail.com'}]
maintainers = [{name = 'Kozea', email = 'dev@kozea.fr'}]
keywords = ['rest', 'flask', 'api', 'sqlalchemy']
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'sqlalchemy',
    'python-dateutil',
]

[project.optional-dependencies]
test = [
  'black',
  'flake8',
  'pytest-cov',
  'pytest-flake8',
  'pytest-isort',
  'pytest',
  'flask',
  'flask-sqlalchemy',
  'tornado',
  'sanic<21',
  'aiohttp',
  'pyyaml',
]
doc = ['pydoc-markdown<3.0']
flask = ['flask']
tornado = ['tornado']
yaml = ['pyyaml']

[project.urls]
Code = "https://github.com/Kozea/unrest"
Documentation = "https://github.com/Kozea/unrest"

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
)/
'''

[tool.isort]
multi_line_output=5

[tool.pytest.ini_options]
norecursedirs = ".git build *.egg-info .eggs venv"
flake8-ignore = "* W503 unrest/tests/static/openapi_result.py E501"

markers = [
  "flask",
  "http_server",
  "tornado",
  "sanic",
]
